# deal-screening-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  codex.md  docker-compose.yml  fly.toml  pyproject.toml
.agent/: claude_log.md  codex_log.md  handoff.json
.agent/prompts/: codex_session.md
.claude/: settings.json
.github/workflows/: ci.yml
.spec/: 00_main_spec.md  01_decomposition.md  05_deployment.md  06_operations.md  README.md  system_spec.md
.spec/appendices/: A_lifecycle_maps.md  B_decision_log.md  C_flyio_portfolio_deployment.md
.spec/modules/: auth_service.md  background_jobs.md  dashboard_api.md  extraction_service.md  ingestion_service.md  input_validation.md  observability.md  rate_limiter.md  scoring_engine.md  secrets_config.md
alembic/: env.py
alembic/versions/: 1ed7e8f2e432_initial_schema.py  a3f1b9c45d01_audit_log_redesign_and_archived_status.py  b7e2d4f89a23_add_background_jobs_table.py  c9d3e5f01b45_add_auth_tables.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  (+1 more)
tests/: test_auth_module.py  test_background_jobs.py  test_base_mixins.py  test_criteria_evaluator.py  test_dashboard_api.py  test_database.py  test_enums.py  test_extraction_service.py  test_ingestion_service.py  test_input_validation.py  test_llm_client.py  test_main_api.py  test_models_metadata.py  test_pdf_parser.py  test_pii_scrubber.py  test_rate_limiter.py  test_schemas.py  test_scoring_service.py  test_session6.py  test_session7.py
workflow1/: PROTOCOL.md  SYSTEM_SPEC_TEMPLATE.md  bootstrap.sh  claude_session.md
(+73 files in other folders)
